--- a/ApplicationGarage/templates/AppGarage/index.html
+++ b/ApplicationGarage/templates/AppGarage/index.html
@@ -105,6 +105,7 @@
 
     .item-price {
         background-color: red;
+        text-shadow: 0 0 5px white;
         /* float: right; */
         right: 15px;
         bottom: 5px;
