--- a/ApplicationGarage/templates/AppGarage/index.html
+++ b/ApplicationGarage/templates/AppGarage/index.html
@@ -8,7 +8,10 @@
         background: rgb(255, 255, 255);
         background: linear-gradient(162deg, rgba(195, 195, 195, 0.8869922969187675) 0%, rgba(173, 173, 173, 0.7301295518207283) 35%, rgba(219, 249, 255, 1) 100%);
         display: grid;
-        grid-template-columns: repeat(auto-fill, 300px);
+        /* grid-template-columns: repeat(auto-fill, 200px); */
+        grid-template-columns: repeat(auto-fill, 200px) minmax(min-content, 33vh);
+        /* grid-template-columns: 33% 33% 33%; */
+
         justify-content: space-evenly;
         /*  */
 
@@ -27,7 +30,7 @@
         grid-column-start: col-start 1;
         grid-column: 1 / -1;
         grid-column-start: 0;
-        width: 3000px !important;
+        /* width: 3000px !important; */
         height: fit-content;
         padding-top: 3vh;
         padding-bottom: 3vh;
@@ -40,14 +43,17 @@
         /* background: sienna; */
 
         overflow: auto;
-        margin: 10px;
+        margin: 2px;
 
         transition: 0.3s;
-        max-width: 400px;
+        /* max-width: 300px; */
         opacity: 0.75;
         position: relative;
-        height: 25vh;
+        /* height: 25vh;
+        width: 25vh; */
         border-radius: 9px;
+        /* overflow: scroll; */
+        max-height: 200px;
     }
 
 
@@ -68,15 +74,17 @@
         max-width: 200px;
         max-height: 100%;
         max-width: 100%;
+
         z-index: 0;
-        /* width: 100%; */
-        /* height: 100%; */
+
         max-width: 100%;
         position: absolute;
         top: 0;
         top: 50%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
+        width: 100%;
+        height: 100%;
     }
 
     .item-footer {
@@ -87,12 +95,14 @@
         opacity: 0.1;
         position: inherit;
         position: relative;
-        max-width: 100%;
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
         top: 50%;
         text-shadow: 0 0 5px black;
         color: white;
+        /*  */
+        max-height: 100%;
+        max-width: 100%;
 
     }
 
@@ -104,8 +114,9 @@
     }
 
     .item-price {
-        background-color: red;
-        text-shadow: 0 0 5px white;
+        /* background-color: rgb(255, 123, 0); */
+        background-color: rgb(255, 102, 0);
+        text-shadow: 0 0 3px rgb(255, 255, 255);
         /* float: right; */
         right: 15px;
         bottom: 5px;
@@ -130,12 +141,22 @@
         document.body.appendChild(main_container)
     }
 
+    function OnloadItems() {
+        toPopUp = 0
+        var PoUp = setInterval(() => {
+            current = allItemList.shift()
+            Create_ListItem(current.fields);
+            toPopUp++;
+            if (toPopUp === 3) {
+                clearInterval(PoUp);
+            }
+        }, 550)
 
-    function Create_ListItem(data) {
+    }
+    function Create_ListItem(data) { //ITEM LIST
         datas = ['category', 'description', 'link', 'owner', 'price', 'time', 'title'];
         insideDIV = `
-                            <div class="item-footer">
-                    
+                <div class="item-footer">
                     <br>
                     The Description ${data.description}
                     <small>Seller: ${data.owner}</small>
@@ -144,9 +165,8 @@
                     <small>Category: ${data.category}</small>
                 </div>
             <img class="item-image" src="${data.link}">
-            <span class="item-price">Price: ${data.price}</span>
+            <span class="item-price">Presyo: ${data.price}</span>
             <br>
-
             `
         itemContainer = document.createElement('div');
         itemContainer.setAttribute("class", "item-Container");
@@ -164,28 +184,53 @@
         adContainer.innerHTML = `<div> <h1> The ADs are Created Here</h1> </div>`
         main_container.appendChild(adContainer)
     }
+    async function SendRequest(url) {
+        var i = 0
+        allItemList = []
 
+        let Allresponse = await fetch(url).then(response => response.json()).then(data => {
+            dataCount = data.length
+            var interVal = setInterval(() => {
+                allItemList.push(data[i])
+                i++;
+                if (i >= dataCount) { // The number to pop
+                    clearInterval(interVal);
+                }
+            }, 100);
+            return data
+        })
+    }
 
 </script>
 
 <script>
-    var ItemCount = 0
     Create_ListContainer()
+    SendRequest('KuhainAngListing') // fetch url
+    OnloadItems()
 
-    fetch('KuhainAngListing').then(response => response.json()).then(data => {
-        console.log(ItemCount, data.length)
 
-        do {
-            if ((ItemCount + 1) % 8 == 0) {
-                Create_Advertisments()
+    function Create_RandomListItem(min, max) {
+        ItemCount = allItemList.length
+        if (ItemCount > 0) {
+            toIndex = Math.floor(Math.random() * (max - min) + min);
+            if (allItemList[toIndex]) {
+                indexPosition = allItemList.indexOf(allItemList[toIndex])
+                Position = allItemList.splice(toIndex, 1)
+                // console.log('yes: ', Position)
+                console.log('YES')
+                // console.log('Fields: ', Position[0].fields)
+                Create_ListItem(Position[0].fields)
+                return Position
             }
-            Create_ListItem(data[ItemCount].fields);
-            ItemCount += 1;
-        } while (ItemCount <= (data.length - 1))
-        console.log('Length: ', data.length)
+            console.log('No still got:  ', ItemCount)
+            Create_RandomListItem(0, (ItemCount - 1))
+        } else {
+            console.log('Empty')
+        }
+    }
+    // INITIATE THIS TO ADD 
+    Create_RandomListItem(0, allItemList.length)
 
-    })
 
-    // Remove_ListItem()
 </script>
 {%endblock%}
