--- a/ApplicationGarage/templates/AppGarage/layout.html
+++ b/ApplicationGarage/templates/AppGarage/layout.html
@@ -201,7 +201,7 @@
 
     {% block body %}
     {% endblock %}
-    <div style="height: 1000px;"></div>
+    <!-- <div style="height: 1000px;"></div> -->
 </body>
 
 </html>
