--- a/ApplicationGarage/templates/AppGarage/index.html
+++ b/ApplicationGarage/templates/AppGarage/index.html
@@ -54,6 +54,7 @@
         border-radius: 9px;
         /* overflow: scroll; */
         max-height: 200px;
+        z-index: 0 !important;
     }
 
 
@@ -83,7 +84,7 @@
     .item-footer {
         text-align: center;
         padding: 20px 16px;
-        z-index: 2;
+        z-index: 2 !important;
         background-color: rgba(66, 85, 137, 0.361);
         opacity: 0;
         position: inherit;
