modified hover and database

--- a/ApplicationGarage/templates/AppGarage/index.html
+++ b/ApplicationGarage/templates/AppGarage/index.html
@@ -151,7 +151,7 @@
                     <small>Category: ${data.category}</small>
                 </div>
             <img class="item-image" src="${data.link}">
-            <span class="item-price">₱ ${data.price}</span>
+            <button onclick="alert('Price: ')" class="item-price">₱ ${data.price}</button>
             <br>
             `
         itemContainer = document.createElement('div');
