--- a/ApplicationGarage/templates/AppGarage/layout.html
+++ b/ApplicationGarage/templates/AppGarage/layout.html
@@ -199,10 +199,11 @@
         }
     </script>
 
-
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!-- <script src="{% static 'AppGarage/contact.js' %}"></script> -->
     {% block body %}
     {% endblock %}
-    <script src="{% static 'AppGarage/contact.js' %}"></script>
+
     <!-- <div style="height: 1000px;"></div> -->
 </body>
 
