--- a/ApplicationGarage/templates/AppGarage/index.html
+++ b/ApplicationGarage/templates/AppGarage/index.html
@@ -204,7 +204,7 @@
     // 
     Create_ListContainer()
     SendRequest('KuhainAngListing') // fetch url
-    OnloadItems()
+    // OnloadItems()
 
     function OnloadItems() {
         toPopUp = 0
