--- a/ApplicationGarage/templates/AppGarage/index.html
+++ b/ApplicationGarage/templates/AppGarage/index.html
@@ -274,6 +274,7 @@
 
         if (window.innerHeight + window.scrollY >= document.body.offsetHeight) {
             // Remove_ListItem()
+            console.log('onscroll')
             Create_RandomListItem(allItemList)
         }
     };
