--- a/ApplicationGarage/templates/AppGarage/index.html
+++ b/ApplicationGarage/templates/AppGarage/index.html
@@ -2,133 +2,7 @@
 {% load static %}
 
 {% block body %}
-
-<style>
-    #main-container {
-        background: rgb(255, 255, 255);
-        background: linear-gradient(162deg, rgba(195, 195, 195, 0.8869922969187675) 0%, rgba(173, 173, 173, 0.7301295518207283) 35%, rgba(219, 249, 255, 1) 100%);
-        display: grid;
-        /* grid-template-columns: repeat(auto-fill, 200px); */
-        grid-template-columns: repeat(auto-fill, 200px) minmax(min-content, 33vh) minmax(min-content, 33vh);
-        /* grid-template-columns: minmax(min-content, 33vh) minmax(min-content, 33vh) minmax(min-content, 33vh); */
-
-        /* grid-template-columns: 33% 33% 33%; */
-
-        justify-content: space-evenly;
-        /*  */
-
-    }
-
-    .ad-container {
-        background-color: rgb(255, 191, 114);
-        height: 30vh;
-        text-align: center;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        transition: 0.3s;
-        max-width: 100%;
-        height: 30vh;
-        position: relative;
-        /*  */
-        grid-column-start: col-start 1;
-        grid-column: 1 / -1;
-        grid-column-start: 0;
-        /* width: 3000px !important; */
-        height: fit-content;
-        padding-top: 3vh;
-        padding-bottom: 3vh;
-    }
-
-    /* .item-Container:nth-child(6) {
-    } */
-
-    .item-Container {
-        /* background: sienna; */
-
-        overflow: auto;
-        margin: 2px;
-
-        transition: 0.3s;
-        /* max-width: 300px; */
-        opacity: 0.95;
-        position: relative;
-        /* height: 25vh;
-        width: 25vh; */
-        border-radius: 9px;
-        /* overflow: scroll; */
-        max-height: 200px;
-        z-index: 0 !important;
-        height: 200px;
-    }
-
-
-
-
-
-    .item-image {
-        border: 0..8px solid rgb(223, 245, 191);
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        /*  */
-        max-width: 200px;
-        max-height: 100%;
-        max-width: 100%;
-
-        z-index: 0;
-
-        max-width: 100%;
-        position: absolute;
-        top: 0;
-        top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        width: 100%;
-        height: 100%;
-    }
-
-    .item-footer {
-        text-align: center;
-        padding: 20px 16px;
-        z-index: 0 !important;
-        background-color: rgba(66, 85, 137, 0.361);
-        opacity: 0;
-        position: inherit;
-        position: relative;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        top: 50%;
-        text-shadow: 0 0 5px black;
-        color: white;
-        /*  */
-        max-height: 100%;
-        max-width: 100%;
-        display: none;
-    }
-
-    .item-footer:hover {
-        background-color: rgba(39, 61, 124, 0.944);
-        opacity: 1;
-        z-index: 2;
-
-    }
-
-    .item-footer small {
-        display: block;
-    }
-
-    .item-price {
-        /* background-color: rgb(255, 123, 0); */
-        background-color: rgb(255, 126, 126);
-        text-shadow: 0 0 3px rgb(255, 255, 255);
-        color: white;
-        /* float: right; */
-        right: 15px;
-        bottom: 5px;
-        position: absolute;
-        padding: 5px;
-        border: none;
-        border-radius: 4px;
-        z-index: 5;
-    }
-</style>
+<link rel="stylesheet" href="{% static 'AppGarage/index.css' %}">
 
 
 <!-- CREATING ELEMENTS WITH SCRIPTS -->
@@ -150,19 +24,14 @@
         CreatedListItem.push(data)
         datas = ['category', 'description', 'link', 'owner', 'price', 'time', 'title'];
         insideDIV = `
-                <div class="item-footer">
-                    <br>${data.id}
-                    The Description ${data.description}
-                    <small>Seller: ${data.owner}</small>
-                    <small>Contact: ${data.contact}</small>
-                    <small>Time: ${data.time}</small>
-                    <small>Category: ${data.category}</small>
-                </div>
-            <img class="item-image" src="${data.link}">
-            <button onclick="OpenModal('[${data.title}, ${data.price},${data.link},${data.description},${data.owner},${data.contact},${data.time},${data.category}]')"  class="item-price">₱ ${dataPrice}</button>
+        
+
+            <img onclick="OpenModal('[${data.title}, ${data.price},${data.link},${data.description},${data.owner},${data.contact},${data.time},${data.category}]')" class="item-image" src="${data.link}">
+            <button onclick="OpenModal('[${data.title}, ${data.price},${data.link},${data.description},${data.owner},${data.contact},${data.time},${data.category}]')"  class="item-price">₱ ${dataPrice}</button>    
 
             <br>
             `
+
         itemContainer = document.createElement('div');
         itemContainer.setAttribute("class", "item-Container");
         itemContainer.innerHTML = insideDIV;
@@ -176,7 +45,8 @@
     function Create_Advertisments() {
         adContainer = document.createElement('div');
         adContainer.setAttribute("class", "ad-container");
-        adContainer.innerHTML = `<div> <h1> The ADs are Created Here</h1> </div>`
+        adContainer.innerHTML = `    <img src="{% static 'AppGarage/adsample.png' %}">
+`
         main_container.appendChild(adContainer)
     }
     async function SendRequest(url) {
@@ -297,159 +167,7 @@
 <!-- MODAL -->
 <!-- Trigger/Open The Modal -->
 
-
-<!-- The Modal -->
-<style>
-    body {
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    /* The Modal (background) */
-    .modal-container-style {
-        display: none;
-        /* Hidden by default */
-        position: fixed;
-        /* Stay in place */
-        z-index: 10;
-        /* Sit on top */
-        padding-top: 3vh;
-        /* Location of the box */
-        left: 0;
-        top: 0;
-        width: 100%;
-        /* Full width */
-        height: 100%;
-        /* Full height */
-        overflow: auto;
-        /* Enable scroll if needed */
-        background-color: rgb(0, 0, 0);
-        /* Fallback color */
-        background-color: rgba(0, 0, 0, 0.4);
-        /* Black w/ opacity */
-        overflow: scroll;
-    }
-
-    /* Modal Content */
-    .modal-content {
-        background-color: #fefefe;
-        margin: auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%;
-        padding-bottom: 60px;
-        /* text-align: center; */
-        position: relative;
-        border-radius: 8px;
-    }
-
-    .modal-content span {
-        display: block;
-    }
-
-    #data-link {
-
-        align-self: center;
-        border-radius: 8px;
-
-        margin: auto auto;
-        text-align: center;
-        width: fit-content;
-        height: fit-content;
-        max-width: 100%;
-        position: relative;
-    }
-
-    .owner {
-
-        text-align: right;
-        font-size: x-large;
-        padding: 8px;
-        margin: 8px;
-    }
-
-    .toButton {
-        text-decoration: none;
-        background-color: rgb(255, 220, 187);
-        border-radius: 8px;
-        padding: 8px;
-        margin: 8px;
-        color: black;
-        text-shadow: 3px white;
-        border: none;
-        font-size: xx-large;
-        box-shadow: 0 0 6px grey;
-    }
-
-    #data-link img {
-        max-width: 100%;
-        max-height: 45vh;
-        border-radius: 8px;
-        box-shadow: 4px 0px 20px grey;
-    }
-
-    #data-title {
-        text-align: center;
-    }
-
-    #data-description {
-        background-color: rgb(248, 241, 232);
-        text-indent: 2.5rem;
-        text-align: justify;
-        margin: auto;
-        padding: 5px;
-        margin-bottom: 30px;
-        font-size: x-large;
-        max-width: 100%;
-    }
-
-    #data-time {
-        /* text-align: right; */
-
-    }
-
-    #data-price {
-        color: orange;
-        font-size: large;
-    }
-
-
-
-    /* The Close Button */
-    .close {
-        color: #aaaaaa;
-        float: right;
-        font-size: 50px;
-        font-weight: bold;
-        /* margin-bottom: 15px; */
-
-    }
-
-    .close:hover,
-    .close:focus {
-        color: #000;
-        text-decoration: none;
-        cursor: pointer;
-
-    }
-
-    textarea {
-        font-size: x-large !important;
-        background-color: rgb(242, 255, 222);
-        width: 100%;
-    }
-
-    #message-sender {
-        font-size: x-large !important;
-        background-color: rgb(222, 242, 255);
-        width: 100%;
-        margin-bottom: 10px;
-    }
-</style>
-
-<!-- MDOAL STYLE -->
-<!-- <script src="{% static 'AppGarage/contact.js' %}"></script> -->
 <div id="modal-container" class="modal-container-style"></div>
-
 <script>
     var modal = document.getElementById("modal-container");
     var span = document.getElementsByClassName("close")[0];
